--- a/app/src/main/res/layout/music_list_item.xml
+++ b/app/src/main/res/layout/music_list_item.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:paddingBottom="8dp">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="259dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="234dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:text="Title"
         android:textColor="@color/colorText"
@@ -19,20 +21,20 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="79dp"
-        android:layout_height="80dp"
+        android:layout_width="69dp"
+        android:layout_height="67dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        app:srcCompat="@drawable/ic_note" />
 
     <TextView
         android:id="@+id/artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
         android:text="artist"
         android:textColor="@color/colorText"
         app:layout_constraintStart_toEndOf="@+id/imageView"
