--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -34,6 +34,7 @@
         android:id="@+id/play"
         android:layout_width="49dp"
         android:layout_height="45dp"
+        android:layout_marginTop="16dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_play_arrow_24px"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,11 +42,11 @@
         app:layout_constraintTop_toBottomOf="@+id/seekbar" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/nextIB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="12dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toStartOf="@+id/play"
         app:layout_constraintTop_toBottomOf="@+id/seekbar"
@@ -63,11 +64,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/prevIB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="24dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintStart_toEndOf="@+id/play"
         app:layout_constraintTop_toBottomOf="@+id/seekbar"
